--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,8 +3,8 @@ pipeline {
     agent any
 
     environment {
-        JAR_NAME = "Iron.jar"        // Replace with actual jar name
-        PROFILE = "prod"                // Or dev/staging/etc.
+        JAR_NAME = "Iron-0.0.1-SNAPSHOT.jar"
+        PROFILE = "prod"            
         PORT = "8080"
     }
 
