--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,49 +3,32 @@ pipeline {
 
     environment {
         JAR_NAME = "Iron-0.0.1-SNAPSHOT.jar"
-        PROFILE = "prod"
-        PORT = "8080"
+        EC2_USER = "ec2-user"
+        EC2_HOST = "13.201.157.44"
+        EC2_PATH = "/home/ec2-user/"
+        PEM_PATH = "C:/Users/HP/Downloads/ironkeypair.pem"
     }
 
     stages {
-
         stage('Checkout') {
             steps {
-                echo "Cloning GitHub repository..."
-                git branch: 'main', url: 'https://github.com/Akin321/IronWeb.git'
+                git url: 'https://github.com/Akin321/IronWeb.git'
             }
         }
 
         stage('Build') {
             steps {
-                echo "Building the Spring Boot app with Maven..."
-                // Give execution permission to wrapper if not already
-                sh 'chmod +x mvnw'
                 sh './mvnw clean package -DskipTests'
             }
         }
 
-        stage('Deploy') {
+        stage('Deploy to EC2') {
             steps {
-                echo "Deploying application..."
-
-                sh '''
-                    echo "Killing any running instance of the app (if any)..."
-                    pkill -f $JAR_NAME || true
-
-                    echo "Starting new instance of the app..."
-                    nohup java -jar target/$JAR_NAME --server.port=$PORT --spring.profiles.active=$PROFILE > app.log 2>&1 &
-                '''
+                sh """
+                    scp -i $PEM_PATH target/$JAR_NAME $EC2_USER@$EC2_HOST:$EC2_PATH
+                    ssh -i $PEM_PATH $EC2_USER@$EC2_HOST 'pkill -f $JAR_NAME || true && nohup java -jar $JAR_NAME > app.log 2>&1 &'
+                """
             }
-        }
-    }
-
-    post {
-        success {
-            echo " Build & deployment successful!"
-        }
-        failure {
-            echo " Build failed!"
         }
     }
 }
