--- a/JenkinsFile
+++ b/JenkinsFile
@@ -21,13 +21,14 @@ pipeline {
 				bat './mvnw clean package -DskipTests'            }
         }
 
-        stage('Deploy to EC2') {
-            steps {
-                bat """
-                    scp -i $PEM_PATH target/$JAR_NAME $EC2_USER@$EC2_HOST:$EC2_PATH
-                    ssh -i $PEM_PATH $EC2_USER@$EC2_HOST 'pkill -f $JAR_NAME || true && nohup java -jar $JAR_NAME > app.log 2>&1 &'
-                """
-            }
-        }
+       stage('Deploy to EC2') {
+		    steps {
+		        sh """
+		            scp -i $PEM_PATH -o StrictHostKeyChecking=no target/$JAR_NAME $EC2_USER@$EC2_HOST:$EC2_PATH
+		            ssh -i $PEM_PATH -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST 'pkill -f $JAR_NAME || true && nohup java -jar $JAR_NAME > app.log 2>&1 &'
+		        """
+		    }
+		}
+
     }
 }
