--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,7 +18,7 @@ pipeline {
 
         stage('Build') {
             steps {
-				bat './mvnw clean package -DskipTests'            }
+                sh './mvnw clean package -DskipTests'
         }
 
        stage('Deploy to EC2') {
