--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,23 +12,23 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-				git branch: 'main', url: 'https://github.com/Akin321/IronWeb.git'
+                git branch: 'main', url: 'https://github.com/Akin321/IronWeb.git'
             }
         }
 
         stage('Build') {
             steps {
                 sh './mvnw clean package -DskipTests'
+            }
         }
 
-       stage('Deploy to EC2') {
-		    steps {
-		        sh """
-		            scp -i $PEM_PATH -o StrictHostKeyChecking=no target/$JAR_NAME $EC2_USER@$EC2_HOST:$EC2_PATH
-		            ssh -i $PEM_PATH -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST 'pkill -f $JAR_NAME || true && nohup java -jar $JAR_NAME > app.log 2>&1 &'
-		        """
-		    }
-		}
-
+        stage('Deploy to EC2') {
+            steps {
+                sh """
+                    scp -i $PEM_PATH -o StrictHostKeyChecking=no target/$JAR_NAME $EC2_USER@$EC2_HOST:$EC2_PATH
+                    ssh -i $PEM_PATH -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST 'pkill -f $JAR_NAME || true && nohup java -jar $EC2_PATH$JAR_NAME > app.log 2>&1 &'
+                """
+            }
+        }
     }
 }
