--- a/JenkinsFile
+++ b/JenkinsFile
@@ -28,6 +28,8 @@ pipeline {
             steps {
                 sh """
                     echo 'Deploying JAR to EC2...'
+                    chmod 400 $PEM_PATH
+
                     scp -i $PEM_PATH -o StrictHostKeyChecking=no target/$JAR_NAME $EC2_USER@$EC2_HOST:$EC2_PATH
                     ssh -i $PEM_PATH -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST '
                         pkill -f $JAR_NAME || true
